test/org/midica/testfiles/failing/eff-func-poly-mode-set-2.midica
INCLUDE inc/instruments.midica


0: poly_mode.set(+0)
